update connection status
